# stream-reduce

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: lib.rs  reducer.rs
tests/: test.rs
